LPS-188425 Add ERC to ObjectView in rest-openapi.yaml
