# modules/apps/object/object-admin-rest-impl/src/main/java/com/liferay/object/admin/rest/internal/resource/v1_0/ObjectViewResourceImpl.java
@@ -58,6 +58,20 @@ public class ObjectViewResourceImpl extends BaseObjectViewResourceImpl {
 	public EntityModel getEntityModel(MultivaluedMap multivaluedMap) {
 		return _entityModel;
 	}
+	
+	public ObjectView
+			getObjectDefinitionByExternalReferenceCodeObjectDefinitionExternalReferenceCodeObjectViewByExternalReferenceCodeObjectViewExternalReferenceCode(
+				String objectDefinitionExternalReferenceCode,
+				String objectViewExternalReferenceCode)
+		throws Exception {
+
+		return _toObjectView(
+			_objectViewService.
+				fetchObjectViewByObjectDefinitionExternalReferenceCodeObjectViewExternalReferenceCode(
+					objectDefinitionExternalReferenceCode,
+					objectViewExternalReferenceCode,
+					contextCompany.getCompanyId()));
+	}
 
 	@Override
 	public Page<ObjectView>
